# openshift-mcp-server

./: .gitignore  README.md  pyproject.toml
src/openshift_mcp_server/: server.py
src/openshift_mcp_server/tools/: diagnostics.py  gpu.py  monitoring.py  resources.py  storage.py
src/openshift_mcp_server/utils/: formatting.py  oc.py  prometheus.py
