[project]
name = "openshift-mcp-server"
version = "0.1.0"
description = "A Model Context Protocol server for OpenShift tools and diagnostics"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
]

[project.scripts]
openshift-mcp-server = "openshift_mcp_server.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/openshift_mcp_server"]
